KSTIP-295: Sonar Issue Exception die sind im Code geworfen sollten einen eigenen sein und nicht generisch zu unterscheiden besser welche wir verfen und welche Java wirft. Dazu toList anstatt collector.tolist, anscheinen ist es besser so wegen immutability.