@@ -32,7 +32,7 @@ public class GesuchsperiodenService {
         return this.gesuchsperiodeRepository.findAll()
                 .stream()
                 .map(gesuchsperiodeMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<GesuchsperiodeDto> getGesuchsperiode(UUID id) {
@@ -46,6 +46,6 @@ public class GesuchsperiodenService {
         return gesuchsperiodeRepository
                 .findAllActiveForDate(LocalDate.now())
                 .map(gesuchsperiodeMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
